[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "hal integration testing of examples"
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "rust-integration-testing-of-examples"
version = "0.1.0"
edition = "2018"

[dependencies]

#  hal versions using git
                                                      # commentted crate using cortex-m-rt ^0.6 which conflicts
stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
#stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
#stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
stm32f3xx-hal = { git = "https://github.com/Sh3Rm4n/stm32f3xx-hal", optional = true, branch = "pac-upgrade" }
#stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true } 
#stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
#stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true }
stm32l0xx-hal = { git = "https://github.com/stm32-rs/stm32l0xx-hal", optional = true }
#stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", optional = true, default-features = false}
#stm32l1xx-hal = { git = "https://github.com/TheCallSign/stm32l1xx-hal", optional = true, default-features = false}
#stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", optional = true }


#  driver versions using git

dht-sensor      = { git = "https://github.com/michaelbeaumont/dht-sensor", branch = "main"}
ssd1306         = { git = "https://github.com/jamwaffles/ssd1306"  }  

# examples//driver-examples/
mcp4x           = { git = "https://github.com/eldruin/mcp4x-rs" }# mcp4x = "0.1"
ad983x          = { git = "https://github.com/eldruin/ad983x-rs" }
ads1x1x         = { git = "https://github.com/eldruin/ads1x1x-rs" }
bmi160          = { git = "https://github.com/eldruin/bmi160-rs" }
ds1307          = { git = "https://github.com/eldruin/ds1307-rs" }
eeprom24x       = { git = "https://github.com/eldruin/eeprom24x-rs" }
embedded-ccs811 = { git = "https://github.com/eldruin/embedded-ccs811-rs" }
hdc20xx         = { git = "https://github.com/eldruin/hdc20xx-rs" }
iaq-core        = { git = "https://github.com/eldruin/iaq-core-rs" }
isl29125        = { git = "https://github.com/eldruin/isl29125-rs" }
max170xx        = { git = "https://github.com/eldruin/max170xx-rs" }
max3010x        = { git = "https://github.com/eldruin/max3010x-rs" }
mcp794xx        = { git = "https://github.com/eldruin/mcp794xx-rs" }
mlx9061x        = { git = "https://github.com/eldruin/mlx9061x-rs" }
mma8x5x         = { git = "https://github.com/eldruin/mma8x5x-rs" }
opt300x         = { git = "https://github.com/eldruin/opt300x-rs" }
pwm-pca9685     = { git = "https://github.com/eldruin/pwm-pca9685-rs" }
si4703          = { git = "https://github.com/eldruin/si4703-rs" }
tcs3472         = { git = "https://github.com/eldruin/tcs3472-rs" }
tmp006          = { git = "https://github.com/eldruin/tmp006-rs" }
tmp1x2          = { git = "https://github.com/eldruin/tmp1x2-rs" }
veml6030        = { git = "https://github.com/eldruin/veml6030-rs" }
veml6070        = { git = "https://github.com/eldruin/veml6070-rs" }
veml6075        = { git = "https://github.com/eldruin/veml6075-rs" }

# examples/misc-i2c-drivers/
#aht10           = { git = "https://github.com/heyitsanthony/aht10" }
#aht20           = { git = "https://github.com/mythmon/aht20" }
#hdc1080         = { git = "https://github.com/iohe/hdc1080-rs", default-features = false }  NEEDS std
vl53l0x          = { git = "https://github.com/copterust/vl53l0x" }


#cortex-m-rtic = ">=0.6" # needed for condition on different hals. Still not released.
cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic" }
dwt-systick-monotonic = { git = "https://github.com/rtic-rs/dwt-systick-monotonic", optional = true}

# for example ccs811-gas-voc-usart-logger
#  include *also* thumbv6 support
shared-bus-rtic = { git = "https://github.com/ryan-summers/shared-bus-rtic", features = ["thumbv6"], optional = true }

# only certain versions of radio and radio-sx127x work together
#radio         = { version = "0.9.0" }
#radio-sx127x  = { version = "0.11.0", default-features = false }
radio         = { version = "0.9.1" }
radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }

#  check:  diff dev-testing/Cargo.toml release-testing/Cargo.toml
#
#  below here dev-testing/Cargo.toml should be the same as release-testing/Cargo.toml
#
# updates to crates below are not actively tested by CI. Dependabot update are
# incorporated when the update does not break things.

embedded-hal = {version = "^0.2.4" }

embedded-graphics = ">=0.7"
#shared-bus = { version = "0.2.2", features = ["cortex-m"] } need work for this
shared-bus = { version = "0.1.4", features = ["cortexm"] }
heapless = "0.7"
nb = ">=0.1.2"
libm = "0.2"
cortex-m = ">=0.7"
#cortex-m-rt = ">=0.7.0"
cortex-m-rt = "0.6.5"

# for driver-examples based on https://github.com/eldruin/driver-examples

panic-rtt-target = { version =  "0.1.1", features = ["cortex-m"] }
rtt-target = { version =  ">=0.3.1", features = ["cortex-m"] }


# for radio-sx127x  https://github.com/rust-iot/rust-radio-sx127x

#embedded-hal  1.0.0-alpha
e-h-1a = { version = "1.0.0-alpha.5", package = "embedded-hal" }  

embedded-hal-compat = "0.4.0" 
#embedded-hal-compat = { git = "https://github.com/ryankurte/embedded-hal-compat.git", branch = "main", optional = true}

cortex-m-semihosting = { version = "0.3.7" }
panic-semihosting    = { version = ">=0.5.2" }
panic-reset          = { version = ">=0.1.0" }
panic-halt           = { version = ">=0.2.0" }
void                 = { version = ">=1.0.2", default-features = false } # err return values in some hals


[features]
# rtic does not work on stm32f0xx and stm32l0xx devices
stm32f0xx = ["stm32f0xx-hal/rt", "shared-bus-rtic"]
#stm32f1xx = ["stm32f1xx-hal/rt", "shared-bus-rtic", "dwt-systick-monotonic"]
stm32f3xx = ["stm32f3xx-hal/rt", "shared-bus-rtic", "dwt-systick-monotonic"]
#stm32f4xx = ["stm32f4xx-hal/rt", "shared-bus-rtic", "dwt-systick-monotonic"]
#stm32f7xx = ["stm32f7xx-hal/rt", "shared-bus-rtic", "dwt-systick-monotonic"]
#stm32h7xx = ["stm32h7xx-hal/rt", "shared-bus-rtic", "dwt-systick-monotonic"]
stm32l0xx = ["stm32l0xx-hal/rt", "shared-bus-rtic"]
#stm32l1xx = ["stm32l1xx-hal/rt", "shared-bus-rtic", "dwt-systick-monotonic"]
#stm32l4xx = ["stm32l4xx-hal/rt", "shared-bus-rtic", "dwt-systick-monotonic"]
stm32f030xc   = ["stm32f0xx-hal/stm32f030xc"]
stm32f042     = ["stm32f0xx-hal/stm32f042"  ]
#stm32f100     = ["stm32f1xx-hal/stm32f100"  ]
#stm32f101     = ["stm32f1xx-hal/stm32f101"  ]
#stm32f103     = ["stm32f1xx-hal/stm32f103",    "stm32f1xx-hal/medium"]
stm32f303xc   = ["stm32f3xx-hal/stm32f303xc"] 
#stm32f401     = ["stm32f4xx-hal/stm32f401"  ] 
#stm32f405     = ["stm32f4xx-hal/stm32f405"  ] 
#stm32f411     = ["stm32f4xx-hal/stm32f411"  ] 
#stm32f722     = ["stm32f7xx-hal/stm32f722"  ] # no adc in hall yet
#stm32f769     = ["stm32f7xx-hal/stm32f769"  ] # this has adc support but no access to internal channel for mcu temperature
#stm32h742     = ["stm32h7xx-hal/stm32h742"  ]
# see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
stm32l0x2     =    ["stm32l0xx-hal/stm32l0x2",  "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l072kztx = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l0x1     = ["stm32l0xx-hal/stm32l0x1",     "stm32l0xx-hal/mcu-STM32L071KBTx"]
#stm32l100     = ["stm32l1xx-hal/stm32l100"  ]
#stm32l151     = ["stm32l1xx-hal/stm32l151"  ]
#stm32l4x1     = ["stm32l4xx-hal/stm32l4x1"  ]
#stm32l4x2     = ["stm32l4xx-hal/stm32l4x2"  ]
#stm32l4x6     = ["stm32l4xx-hal/stm32l4x6"  ]


## example sections are needed because examples are organized in subdirectories under examples/

# radio-sx127x examples

[[example]]
name = "ad9833-midi-player"
path = "examples/driver-examples/ad9833-midi-player.rs"

[[example]]
name = "ads1015-adc-display"
path = "examples/driver-examples/ads1015-adc-display.rs"

[[example]]
name = "at24c256-eeprom"
path = "examples/driver-examples/at24c256-eeprom.rs"

[[example]]
name = "bmi160-imu-display"
path = "examples/driver-examples/bmi160-imu-display.rs"

[[example]]
name = "ccs811-gas-voc-display"
path = "examples/driver-examples/ccs811-gas-voc-display.rs"

[[example]]
name = "ccs811-gas-voc-hdc2080-display"
path = "examples/driver-examples/ccs811-gas-voc-hdc2080-display.rs"

[[example]]
name = "ds1307-rtc"
path = "examples/driver-examples/ds1307-rtc.rs"

[[example]]
name = "hdc2080-temp-humidity-display"
path = "examples/driver-examples/hdc2080-temp-humidity-display.rs"

[[example]]
name = "iaq-core-c-gas-voc-display"
path = "examples/driver-examples/iaq-core-c-gas-voc-display.rs"

[[example]]
name = "isl29125-color-display"
path = "examples/driver-examples/isl29125-color-display.rs"

[[example]]
name = "max17043-battery-monitor-display"
path = "examples/driver-examples/max17043-battery-monitor-display.rs"

[[example]]
name = "max30102-heart-usart"
path = "examples/driver-examples/max30102-heart-usart.rs"

[[example]]
name = "max30102-display"
path = "examples/driver-examples/max30102-display.rs"

[[example]]
name = "mcp7940n-rtc-display"
path = "examples/driver-examples/mcp7940n-rtc-display.rs"

[[example]]
name = "mlx90614-temperature-display"
path = "examples/driver-examples/mlx90614-temperature-display.rs"

[[example]]
name = "mlx90615-temperature-display"
path = "examples/driver-examples/mlx90615-temperature-display.rs"

[[example]]
name = "mma8452-accel-display"
path = "examples/driver-examples/mma8452-accel-display.rs"

[[example]]
name = "opt3001-als-display"
path = "examples/driver-examples/opt3001-als-display.rs"

[[example]]
name = "pca9685-pwm-rgb-led-servos"
path = "examples/driver-examples/pca9685-pwm-rgb-led-servos.rs"

[[example]]
name = "si4703-fm-radio-display"
path = "examples/driver-examples/si4703-fm-radio-display.rs"

[[example]]
name = "si4703-fm-radio"
path = "examples/driver-examples/si4703-fm-radio.rs"

[[example]]
name = "tcs34725-color-display"
path = "examples/driver-examples/tcs34725-color-display.rs"

[[example]]
name = "tmp006-ir-temp-display"
path = "examples/driver-examples/tmp006-ir-temp-display.rs"

[[example]]
name = "tmp102-temp-display"
path = "examples/driver-examples/tmp102-temp-display.rs"

[[example]]
name = "veml6030-als-display"
path = "examples/driver-examples/veml6030-als-display.rs"

[[example]]
name = "veml6070-uv-display"
path = "examples/driver-examples/veml6070-uv-display.rs"

[[example]]
name = "veml6075-uv-display"
path = "examples/driver-examples/veml6075-uv-display.rs"

[[example]]
name = "ccs811-gas-voc-usart-logger"
path = "examples/driver-examples/ccs811-gas-voc-usart-logger.rs"

[[example]]
name = "iaq-core-c-gas-voc-usart-logger"
path = "examples/driver-examples/iaq-core-c-gas-voc-usart-logger.rs"


# radio-sx127x examples

[[example]]
name = "lora_spi_send"
path = "examples/radio-sx127x/lora_spi_send.rs"

[[example]]
name = "lora_spi_receive"
path = "examples/radio-sx127x/lora_spi_receive.rs"

[[example]]
name = "lora_spi_gps"
path = "examples/radio-sx127x/lora_spi_gps.rs"


# misc examples

[[example]]
name = "blink"
path = "examples/misc/blink.rs"

[[example]]
name = "blink_impl"
path = "examples/misc/blink_impl.rs"

[[example]]
name = "blink3"
path = "examples/misc/blink3.rs"

[[example]]
name = "dht"
path = "examples/misc/dht.rs"

[[example]]
name = "digi_pot"
path = "examples/misc/digi_pot.rs"

[[example]]
name = "echo_by_char"
path = "examples/misc/echo_by_char.rs"

[[example]]
name = "echo_string"
path = "examples/misc/echo_string.rs"

[[example]]
name = "serial_char"
path = "examples/misc/serial_char.rs"

[[example]]
name = "serial_string"
path = "examples/misc/serial_string.rs"

[[example]]
name = "temperature"
path = "examples/misc/temperature.rs"

[[example]]
name = "temperature_display"
path = "examples/misc/temperature_display.rs"

[[example]]
name = "gps_rw"
path = "examples/misc/gps_rw.rs"

[[example]]
name = "text_i2c"
path = "examples/misc/text_i2c.rs"

[[example]]
name = "oled_gps"
path = "examples/misc/oled_gps.rs"

[[example]]
name = "spi"
path = "examples/misc/spi.rs"

[[example]]
name = "battery_monitor_ads1015"
path = "examples/misc/battery_monitor_ads1015.rs"

[[example]]
name = "blink_rtic"
path = "examples/rtic/blink_rtic.rs"

[[example]]
name = "schedule"
path = "examples/rtic/schedule.rs"

[[example]]
name = "resource-user-struct"
path = "examples/rtic/resource-user-struct.rs"

[[example]]
name = "aht10-display"
path = "examples/misc--i2c-drivers/aht10-display.rs"

#[[example]]
#name = "hdc1080-display"
#path = "examples/misc-i2c-drivers/hdc1080-display.rs"

[[example]]
name = "vl53lox-display"
path = "examples/misc-i2c-drivers/vl53lox-display.rs"
