[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "hal integration testing of examples"
keywords = ["driver", "i2c", "spi", "example"]
license = "MIT OR Apache-2.0"
name = "rust-integration-testing-of-examples"
version = "0.3.0"
edition = "2021"

[dependencies]

#  hal versions using git
                                          
stm32f0xx-hal = { git = "https://github.com/stm32-rs/stm32f0xx-hal", optional = true }
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", optional = true }
stm32f4xx-hal = { version = "0.20.0", optional = true } 
#stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true } 
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", optional = true }
stm32g0xx-hal = { git = "https://github.com/stm32-rs/stm32g0xx-hal", optional = true }
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal", optional = true }
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", optional = true , branch = "eh-v1.0"}
stm32l0xx-hal = { git = "https://github.com/stm32-rs/stm32l0xx-hal", optional = true }
#stm32l1xx-hal = { git = "https://github.com/stm32-rs/stm32l1xx-hal", optional = true, default-features = false}
stm32l1xx-hal = { git = "https://github.com/TheCallSign/stm32l1xx-hal", optional = true, default-features = false}
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", optional = true }


#  driver versions using git

dht-sensor      = { git = "https://github.com/michaelbeaumont/dht-sensor", branch = "main"}

# for fiddling with ssd1306 rtic testing
display-interface-spi = "0.4.1"
tinybmp = "0.3.1"  # for loading bmp image. could be dev-dependencies

#ssd1306         = ">=0.8.0"   
# NB ehal1  WORKS WITH stm32h7xx BUT BREAKS stm32f4xx IN shared_bus EXAMPLES.   <************************
#      (because shared_bus does not yet have an ehal1 version that works )
#ssd1306         = { git = "https://github.com/jamwaffles/ssd1306"  }  
ssd1306         = { git = "https://github.com/bugadani/ssd1306", branch = "ehal1"  }  

# experiments with onewire so far only using stm32f1xx BUT compile problems can cause
# problems with src/onewire...  that prevent other examples from compiling
#onewire         = { git = "https://github.com/kellerkindt/onewire" }
#onewire         = { git = "https://github.com/asdfuser/onewire" }   # src/ libs compiled circa June 2023
onewire         = { git = "https://github.com/katyo/onewire" }       # src/ libs compiled circa Aug  2023
#katyo has an eh1 branch

#one-wire-bus     = ">=0.1.1" 
#one-wire-bus    = { git = "https://github.com/fuchsnj/one-wire-bus" }
one-wire-bus    = { git = "https://github.com/daniel-larsen/one-wire-bus" }
#one-wire-bus    = { git = "https://github.com/jneem/one-wire-bus" }
#ds18b20         = { git = "https://github.com/fuchsnj/ds18b20" }
#ds18b20         = { git = "https://github.com/robko23/ds18b20" }
#*ds18b20         = { git = "https://github.com/rednaz1337/ds18b20" }
ds18b20         = { git = "https://github.com/pdgilbert/ds18b20" }
#ds18b20         = { path = "/home/paul/githubClones/ds18b20" }

# examples//driver-examples/
mcp4x           = { git = "https://github.com/eldruin/mcp4x-rs" }# mcp4x = "0.1"
#ad983x          = { git = "https://github.com/eldruin/ad983x-rs" }  # CONFLICT needs embedded-hal = "=1.0.0-alpha.8 but stm32f4xx-hal wants 11
ads1x1x         = { git = "https://github.com/eldruin/ads1x1x-rs" }
bmi160          = { git = "https://github.com/eldruin/bmi160-rs" }
ds1307          = { git = "https://github.com/eldruin/ds1307-rs" }
eeprom24x       = { git = "https://github.com/eldruin/eeprom24x-rs" }
embedded-ccs811 = { git = "https://github.com/eldruin/embedded-ccs811-rs" }
hdc20xx         = { git = "https://github.com/eldruin/hdc20xx-rs" }
iaq-core        = { git = "https://github.com/eldruin/iaq-core-rs" }
isl29125        = { git = "https://github.com/eldruin/isl29125-rs" }
max170xx        = { git = "https://github.com/eldruin/max170xx-rs" }
max3010x        = { git = "https://github.com/eldruin/max3010x-rs" }
mcp794xx        = { git = "https://github.com/eldruin/mcp794xx-rs" }
mlx9061x        = { git = "https://github.com/eldruin/mlx9061x-rs" }
mma8x5x         = { git = "https://github.com/eldruin/mma8x5x-rs" }
opt300x         = { git = "https://github.com/eldruin/opt300x-rs" }
pwm-pca9685     = { git = "https://github.com/eldruin/pwm-pca9685-rs" }
si4703          = { git = "https://github.com/eldruin/si4703-rs" }
tcs3472         = { git = "https://github.com/eldruin/tcs3472-rs" }
tmp006          = { git = "https://github.com/eldruin/tmp006-rs" }
tmp1x2          = { git = "https://github.com/eldruin/tmp1x2-rs" }
veml6030        = { git = "https://github.com/eldruin/veml6030-rs" }
veml6070        = { git = "https://github.com/eldruin/veml6070-rs" }
veml6075        = { git = "https://github.com/eldruin/veml6075-rs" }

# examples/misc-i2c-drivers/
#aht10           = { git = "https://github.com/heyitsanthony/aht10" }
aht10           = { git = "https://github.com/andy31415/aht10", branch = "fix_status_check" }
#aht10-async           = { git = "https://github.com/jneem/aht10-async" }  # needs update from rc1
#aht20           = { git = "https://github.com/mythmon/aht20" } # this appears to not be actively updated
#aht20           = { git = "https://github.com/nim65s/aht20" } 
#aht20-async     = "1.0.0"
aht20-async        = { git = "https://github.com/fmckeogh/aht20-async" } 
#hdc1080         = { git = "https://github.com/iohe/hdc1080-rs", default-features = false }  This one needs std
embedded-hdc1080-rs = { git = "https://github.com/maxmarvil/hdc1080-embedded-rs" } 
vl53l0x          = { git = "https://github.com/copterust/vl53l0x" }
#mlx9064x         = { git = "https://github.com/paxswill/mlx9064x-rs", branch = "main", features = ["libm"], default-features = false } 
#ina219           = {  version = "0.1.0" }
#ina219           = { git = "https://github.com/scttnlsn/ina219" }
#ina219           = { git = "https://github.com/sndnvaps/ina219_rs" }
ina219           = { git = "https://github.com/tdittr/ina219", branch = "add-configuration-register" }
##ina219           = { git = "https://github.com/youduda/ina219" }
htu2xd           = { git = "https://github.com/samcrow/HTU2XD" }
xca9548a        = { git = "https://github.com/eldruin/xca9548a-rs" }


rtic = { git = "https://github.com/rtic-rs/rtic", features=["thumbv7-backend", "rtic-monotonics"], optional = true  }
#  NB syntax for rtic-monotonics workspace in  rtic-rs/rtic repository
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", features = [ "cortex-m-systick"], optional = true }

#systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git", optional = true }

#dwt-systick-monotonic = {version = "1.0" , optional = true }  # needed for adc_dma_rtic fiddling but if not optional it stops build with stm32f0xx
dwt-systick-monotonic = {git = "https://github.com/rtic-rs/dwt-systick-monotonic" , optional = true }

# for duration timer in rtic
fugit = { version = "0.3.3", optional = true }
#fugit = { git = "https://github.com/korken89/fugit", optional = true }

#  include *also* thumbv6 support. It seems shared-bus-rtic is no longer needed.
# shared-bus-rtic = { git = "https://github.com/ryan-summers/shared-bus-rtic", features = ["thumbv6"], optional = true }

## only certain versions of radio, radio-sx127x, embedded-hal_1.0.0-alpha and embedded-hal-compat work together
##radio         = { version = "0.9.0" }
##radio-sx127x  = { version = "0.11.0", default-features = false }
#radio         = { version = "0.9.1" }
##radio         = { version = "0.10.0" }
#radio-sx127x  = {  git = "https://github.com/rust-iot/rust-radio-sx127x", default-features = false }
#radio-sx127x  = { version = "0.14.0", default-features = false }
#radio         = { version = "0.11.0" }

#  check:  diff dev-testing/Cargo.toml release-testing/Cargo.toml
#
#  below here dev-testing/Cargo.toml should be the same as release-testing/Cargo.toml
#
# updates to crates below are not actively tested by CI. Dependabot update are
# incorporated when the update does not break things.

# NB. do not mix release and git versions.
#     embedded-hal-bus from git pulls in embedded-hal from git and traits get confused.
#     Compiler gives error
#        note: perhaps two different versions of crate `embedded_hal` are being used?
embedded-hal = "1.0"
embedded-hal-bus = "0.1.0"
embedded-hal-async = "1.0.0"
#embedded-hal       = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-hal-bus   = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-hal-nb  = { git = "https://github.com/rust-embedded/embedded-hal/" }
#embedded-io      = { git = "https://github.com/rust-embedded/embedded-hal/" }

embedded-graphics = ">=0.7"

#shared-bus = { version = "0.2.2", features = ["cortex-m"] } 
#shared-bus = {  git = "https://github.com/Rahix/shared-bus", features = ["cortex-m"] } 
# next not really rc3 yet (Jan 3, 2024 )
#shared-bus = {  git = "https://github.com/TeyKey1/shared-bus", features = ["cortex-m", "embedded-hal-alpha"] } 
heapless = "0.7"
nb = ">=0.1.2"
libm = "0.2"
cortex-m = ">=0.7"
cortex-m-rt = ">=0.7.0"

# for driver-examples based on https://github.com/eldruin/driver-examples

panic-rtt-target = { version =  "0.1.1", features = ["cortex-m"] }
rtt-target = { version =  ">=0.3.1", features = ["cortex-m"] }


# for radio-sx127x  https://github.com/rust-iot/rust-radio-sx127x

#LEAVE THESE COMMENTED LINES FOR REFERENCE BUT REMOVE WHEN SOMETHING WORKS
#embedded-hal  1.0.0-alpha
#e-h-1a = { version = "1.0.0-alpha.5,<1.0.0-alpha.6", package = "embedded-hal" }  
# alpha.6 requires changes to delay and radio-sx127x support. See branch eh-1-alpha
#e-h-1a = { version = "1.0.0-alpha.6,<1.0.0-alpha.7", package = "embedded-hal" }  
#e-h-1a = { version = "1.0.0-alpha.7,<1.0.0-alpha.8", package = "embedded-hal" }  

#stm32f4xx IS NOW NEEDS 1.0.0-alpha.7 AND radio, radio-sx127x, embedded-hal-compat, NEED alpha.5
# src/lib.rs also has lora_spi_gps_usart;  commented out

#embedded-hal-compat = "0.4.0" 
#embedded-hal-compat = { git = "https://github.com/ryankurte/embedded-hal-compat.git", branch = "main", optional = true}

cortex-m-semihosting = { version = "0.3.7" }
panic-semihosting    = { version = ">=0.5.2" }
panic-reset          = { version = ">=0.1.0" }
panic-halt           = { version = ">=0.2.0" }
void                 = { version = ">=1.0.2", default-features = false } # err return values in some hals


[features]
# rtic does not work on stm32f0xx and stm32l0xx devices ??
#stm32f0xx = ["stm32f0xx-hal/rt" , "shared-bus-rtic"]
stm32f0xx = ["stm32f0xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32f1xx = ["stm32f1xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32f3xx = ["stm32f3xx-hal/rt", "rtic", "rtic-monotonics" ]
#stm32f4xx = ["stm32f4xx-hal/rt", "rtic", "dwt-systick-monotonic"]
stm32f4xx = ["stm32f4xx-hal", "rtic", "rtic-monotonics" ]  # rtic2 ?
stm32f7xx = ["stm32f7xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32g0xx = ["stm32g0xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32g4xx = ["stm32g4xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32h7xx = ["stm32h7xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32l0xx = ["stm32l0xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32l1xx = ["stm32l1xx-hal/rt", "rtic", "rtic-monotonics" ]
stm32l4xx = ["stm32l4xx-hal/rt", "rtic", "rtic-monotonics" ]

stm32f030xc   = ["stm32f0xx-hal/stm32f030xc"]
stm32f042     = ["stm32f0xx-hal/stm32f042"  ]
stm32f100     = ["stm32f1xx-hal/stm32f100"  ]
stm32f101     = ["stm32f1xx-hal/stm32f101"  ]
stm32f103     = ["stm32f1xx-hal/stm32f103",    "stm32f1xx-hal/medium"]
stm32f303xc   = ["stm32f3xx-hal/stm32f303xc"] 
stm32f401     = ["stm32f4xx-hal/stm32f401"  ] 
stm32f405     = ["stm32f4xx-hal/stm32f405"  ] 
stm32f411     = ["stm32f4xx-hal/stm32f411"  ] 
stm32f722     = ["stm32f7xx-hal/stm32f722"  ] # no adc in hall yet
stm32f769     = ["stm32f7xx-hal/stm32f769"  ] # this has adc support but no access to internal channel for mcu temperature
stm32g081     = ["stm32g0xx-hal/stm32g081"  ]
stm32g473     = ["stm32g4xx-hal/stm32g473"  ]
stm32h742     = ["stm32h7xx-hal/stm32h742"  ]
# see https://www.st.com/resource/en/datasheet/stm32l072v8.pdf  p12 for some MCU variants
#stm32l0x2     =    ["stm32l0xx-hal/stm32l0x2",  "stm32l0xx-hal/mcu-STM32L072KZTx"]
stm32l0x2kztx     = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L072KZTx"]
#stm32l072kztx = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L072KZTx"]
#stm32l072kztx = ["stm32l0xx-hal/stm32l0x2",     "stm32l0xx-hal/mcu-STM32L053R8Tx"]
#stm32l0x1     = ["stm32l0xx-hal/stm32l0x1",     "stm32l0xx-hal/mcu-STM32L071KBTx"]
stm32l100     = ["stm32l1xx-hal/stm32l100"  ]
stm32l151     = ["stm32l1xx-hal/stm32l151"  ]
stm32l471     = ["stm32l4xx-hal/stm32l471"  ]
stm32l422     = ["stm32l4xx-hal/stm32l422"  ]
stm32l486     = ["stm32l4xx-hal/stm32l486"  ]

# temp-humidity sensor choice in projects
hdc1080   = []
htu2xd    = []
aht10     = []
aht20     = []

## example sections are needed because examples are organized in subdirectories under examples/

# examples/drivers-examples

[[example]]
name = "ad9833-midi-player"
path = "examples/driver-examples/ad9833-midi-player.rs"

[[example]]
name = "ads1015-adc-display"
path = "examples/driver-examples/ads1015-adc-display.rs"

[[example]]
name = "at24c256-eeprom"
path = "examples/driver-examples/at24c256-eeprom.rs"

[[example]]
name = "bmi160-imu-display"
path = "examples/driver-examples/bmi160-imu-display.rs"

[[example]]
name = "ccs811-gas-voc-display"
path = "examples/driver-examples/ccs811-gas-voc-display.rs"

[[example]]
name = "ccs811-gas-voc-hdc2080-display"
path = "examples/driver-examples/ccs811-gas-voc-hdc2080-display.rs"

[[example]]
name = "ds1307-rtc"
path = "examples/driver-examples/ds1307-rtc.rs"

[[example]]
name = "hdc2080-temp-humidity-display"
path = "examples/driver-examples/hdc2080-temp-humidity-display.rs"

[[example]]
name = "iaq-core-c-gas-voc-display"
path = "examples/driver-examples/iaq-core-c-gas-voc-display.rs"

[[example]]
name = "isl29125-color-display"
path = "examples/driver-examples/isl29125-color-display.rs"

[[example]]
name = "max17043-battery-monitor-display"
path = "examples/driver-examples/max17043-battery-monitor-display.rs"

[[example]]
name = "max30102-heart-usart"
path = "examples/driver-examples/max30102-heart-usart.rs"

[[example]]
name = "max30102-display"
path = "examples/driver-examples/max30102-display.rs"

[[example]]
name = "mcp7940n-rtc-display"
path = "examples/driver-examples/mcp7940n-rtc-display.rs"

[[example]]
name = "mlx90614-temperature-display"
path = "examples/driver-examples/mlx90614-temperature-display.rs"

[[example]]
name = "mlx90615-temperature-display"
path = "examples/driver-examples/mlx90615-temperature-display.rs"

[[example]]
name = "mma8452-accel-display"
path = "examples/driver-examples/mma8452-accel-display.rs"

[[example]]
name = "opt3001-als-display"
path = "examples/driver-examples/opt3001-als-display.rs"

[[example]]
name = "pca9685-pwm-rgb-led-servos"
path = "examples/driver-examples/pca9685-pwm-rgb-led-servos.rs"

[[example]]
name = "si4703-fm-radio-display"
path = "examples/driver-examples/si4703-fm-radio-display.rs"

[[example]]
name = "si4703-fm-radio"
path = "examples/driver-examples/si4703-fm-radio.rs"

[[example]]
name = "tcs34725-color-display"
path = "examples/driver-examples/tcs34725-color-display.rs"

[[example]]
name = "tmp006-ir-temp-display"
path = "examples/driver-examples/tmp006-ir-temp-display.rs"

[[example]]
name = "tmp102-temp-display"
path = "examples/driver-examples/tmp102-temp-display.rs"

[[example]]
name = "veml6030-als-display"
path = "examples/driver-examples/veml6030-als-display.rs"

[[example]]
name = "veml6070-uv-display"
path = "examples/driver-examples/veml6070-uv-display.rs"

[[example]]
name = "veml6075-uv-display"
path = "examples/driver-examples/veml6075-uv-display.rs"

[[example]]
name = "ccs811-gas-voc-usart-logger"
path = "examples/driver-examples/ccs811-gas-voc-usart-logger.rs"

[[example]]
name = "iaq-core-c-gas-voc-usart-logger"
path = "examples/driver-examples/iaq-core-c-gas-voc-usart-logger.rs"


# examples/radio-sx127x

[[example]]
name = "lora_spi_send"
path = "examples/radio-sx127x/lora_spi_send.rs"

[[example]]
name = "lora_spi_receive"
path = "examples/radio-sx127x/lora_spi_receive.rs"

[[example]]
name = "lora_spi_gps"
path = "examples/radio-sx127x/lora_spi_gps.rs"


# examples/misc

[[example]]
name = "blink"
path = "examples/misc/blink.rs"

[[example]]
name = "blink_impl"
path = "examples/misc/blink_impl.rs"

[[example]]
name = "blink3"
path = "examples/misc/blink3.rs"

[[example]]
name = "dht"
path = "examples/misc/dht.rs"

[[example]]
name = "oled_dht"
path = "examples/misc/oled_dht.rs"

[[example]]
name = "digi_pot"
path = "examples/misc/digi_pot.rs"

[[example]]
name = "echo_by_char"
path = "examples/misc/echo_by_char.rs"

[[example]]
name = "echo_string"
path = "examples/misc/echo_string.rs"

[[example]]
name = "serial_char"
path = "examples/misc/serial_char.rs"

[[example]]
name = "serial_string"
path = "examples/misc/serial_string.rs"

[[example]]
name = "temperature"
path = "examples/misc/temperature.rs"

[[example]]
name = "oled_temperature"
path = "examples/misc/oled_temperature.rs"

[[example]]
name = "therm10k_display"
path = "examples/misc/therm10k_display.rs"

[[example]]
name = "gps_rw"
path = "examples/misc/gps_rw.rs"

[[example]]
name = "text_i2c"
path = "examples/misc/text_i2c.rs"

[[example]]
name = "oled_gps"
path = "examples/misc/oled_gps.rs"

[[example]]
name = "spi"
path = "examples/misc/spi.rs"

[[example]]
name = "battery_monitor_ads1015"
path = "examples/misc/battery_monitor_ads1015.rs"

[[example]]
name = "onewire"
path = "examples/misc/onewire.rs"

[[example]]
name = "one_wire_bus_find_devices"
path = "examples/misc/one_wire_bus_find_devices.rs"

[[example]]
name = "ds18b20"
path = "examples/misc/ds18b20.rs"


# examples/rtic

[[example]]
name = "blink_rtic"
path = "examples/rtic/blink_rtic.rs"

[[example]]
name = "schedule"
path = "examples/rtic/schedule.rs"

[[example]]
name = "resource-user-struct"
path = "examples/rtic/resource-user-struct.rs"

[[example]]
name = "dht_rtic"
path = "examples/rtic/dht_rtic.rs"

[[example]]
name = "aht10_rtic"
path = "examples/rtic/aht10_rtic.rs"

[[example]]
name = "htu2xd_rtic"
path = "examples/rtic/htu2xd_rtic.rs"

[[example]]
name = "display_stuff_rtic0"
path = "examples/rtic/display_stuff_rtic0.rs"

[[example]]
name = "display_stuff_rtic"
path = "examples/rtic/display_stuff_rtic.rs"

[[example]]
name = "display_stuff_rtic_shared_bus"
path = "examples/rtic/display_stuff_rtic_shared_bus.rs"

[[example]]
name = "ccs811-co2-voc"
path = "examples/rtic/ccs811-co2-voc.rs"

[[example]]
name = "battery_monitor_ads1015_rtic"
path = "examples/rtic/battery_monitor_ads1015_rtic.rs"

[[example]]
name = "battery_monitor_ads1015_rtic_dma"
path = "examples/rtic/battery_monitor_ads1015_rtic_dma.rs"

[[example]]
name = "ina219_rtic"
path = "examples/rtic/ina219_rtic.rs"

[[example]]
name = "displayX2_rtic"
path = "examples/rtic/displayX2_rtic.rs"

[[example]]
name = "serial-dma"
path = "examples/rtic/serial-dma.rs"


# examples/misc-i2c-drivers

[[example]]
name = "htu2xd-display"
path = "examples/misc-i2c-drivers/htu2xd-display.rs"

[[example]]
name = "aht10-display"
path = "examples/misc-i2c-drivers/aht10-display.rs"

[[example]]
name = "aht20-display"
path = "examples/misc-i2c-drivers/aht20-display.rs"

[[example]]
name = "aht20-display-nodelay"
path = "examples/misc-i2c-drivers/aht20-display-nodelay.rs"

[[example]]
name = "hdc1080-display"
path = "examples/misc-i2c-drivers/hdc1080-display.rs"

[[example]]
name = "vl53lox-display"
path = "examples/misc-i2c-drivers/vl53lox-display.rs"

[[example]]
name = "mlx9064x"
path = "examples/misc-i2c-drivers/mlx9064x.rs"

[[example]]
name = "ina219-display"
path = "examples/misc-i2c-drivers/ina219-display.rs"

[[example]]
name = "air_quality"
path = "examples/misc-i2c-drivers/air_quality.rs"

[[example]]
name = "xca9548a"
path = "examples/misc-i2c-drivers/xca9548a.rs"


# examples/projects

[[example]]
name = "temp-humidity-display"
path = "examples/projects/temp-humidity-display.rs"

[[example]]
name = "temperature-display"
path = "examples/projects/temperature-display.rs"
